samples/_failures_safe/1761199817_3e82d2_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_ec93b5cc.c: In function ‘main’:
./samples/SAFE/__tmp_ec93b5cc.c:149:21: error: expected expression at end of input
  149 |                     print_matrix(&
      |                     ^~~~~~~~~~~~
./samples/SAFE/__tmp_ec93b5cc.c:149:21: error: too few arguments to function ‘print_matrix’
./samples/SAFE/__tmp_ec93b5cc.c:55:6: note: declared here
   55 | void print_matrix(const Matrix* mat, const char* name) {
      |      ^~~~~~~~~~~~
./samples/SAFE/__tmp_ec93b5cc.c:149:21: error: expected declaration or statement at end of input
  149 |                     print_matrix(&
      |                     ^~~~~~~~~~~~
./samples/SAFE/__tmp_ec93b5cc.c:149:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ec93b5cc.c:149:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ec93b5cc.c:149:21: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_ec93b5cc.c:149:21: error: expected declaration or statement at end of input
